terraform/network/natgateway.tf
resource "google_compute_router_nat" "mynat_gateway" {
  name   = "router-nat"
  router = google_compute_router.router.name
  region = var.managment_subnet_region

  nat_ip_allocate_option = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"
  
}
